--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 # Keep environment variables out of version control
 .env
-
-/src/generated/prisma
+dist
+coverage
+.DS_Store
 
 /src/generated/prisma
